--- a/OpenWGA/plugins/cm-neo/design/tml/html/util/select-document.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/util/select-document.tml
@@ -8,7 +8,7 @@
 	<tml:then>
 		<div class="select-tree-wrapper">
 			<a href="#" id="select-key-<tml:option name="fieldname"/>" class="form-control">
-				<span class="caret"></span>
+				<tml:comment><span class="caret"></span></tml:comment>
 				<span class="title">
 					<tml:if context="[db:{_dbkey}/docid:{tmlform.field($option_fieldname)}]" iscontextvalid="true">
 						<tml:then>
