#00005513: CM-Classico: improved style for labled checkboxes

--- a/OpenWGA/plugins/cm/design/scripts/css/wga.css
+++ b/OpenWGA/plugins/cm/design/scripts/css/wga.css
@@ -58,6 +58,9 @@ input, textarea{
 input[type=checkbox]{
 	margin-right: 6px;
 }
+input[type=checkbox] + label{
+	display: inline-block;
+}
 
 textarea{
 	height: 70px;
