--- a/OpenWGA/plugins/cm-neo/design/tml/html/toolbar.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/toolbar.tml
@@ -15,12 +15,16 @@
 					<li class="divider"></li>
 				</tml:case>
 				<li class="dropdown-header">Webssite wechseln</li>
-				<tml:foreach item="$mc.dbkeys" currentvalue="_dbkey">
-					<li><a href="<tml:url u-dbkey="_dbkey"/>">
-						<span class="far <tml:script expression="_dbkey==portlet.dbkey ? 'fa-check-square':'fa-square'"/>"></span> 
-						<tml:item name="_dbkey"/>
-					</a></li>
-				</tml:foreach>
+				<li>
+					<ul class="other-sites">
+						<tml:foreach item="$mc.dbkeys" currentvalue="_dbkey">
+							<li><a href="<tml:url u-dbkey="_dbkey"/>">
+								<span class="far <tml:script expression="_dbkey==portlet.dbkey ? 'fa-check-square':'fa-square'"/>"></span> 
+								<tml:item name="_dbkey"/>
+							</a></li>
+						</tml:foreach>
+					</ul>
+				</li>
 				<li class="divider"></li>
 				<li><a href="#" data-action="exit">Abmelden und Content Manager beenden</a></li>
 			</ul>
