#00005528: CM-Neo: Added sitepanel-mask on toolbar dropdown

--- a/OpenWGA/plugins/cm-neo/design/scripts/css/content.scss
+++ b/OpenWGA/plugins/cm-neo/design/scripts/css/content.scss
@@ -26,6 +26,17 @@
 			overflow: hidden;
 			transition: right .3s ease-in;
 
+			.sitepanel-mask{
+				position: absolute;
+				top: 0;
+				left: 0;
+				right: 0;
+				bottom: 0;
+				background: transparent;
+				z-index: 1;
+				display: none;
+			}
+
 			iframe#site-panel {
 				position: absolute;
 				width: 100%;
