--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/content-box/setting.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/content-box/setting.tml
@@ -25,7 +25,7 @@
 
 <label><tml:label key="content-box.settings.layout"/>:</label>
 <div style="margin:10px">
-	<tml:input name="{scoped:style}" type="select" options="{label('content-box.settings.layout.options')}" mode="{option('mode')}"/>
+	<tml:input name="{scoped:style}" type="select" cssclass="form-control" options="{label('content-box.settings.layout.options')}" mode="{option('mode')}"/>
 </div>
 
 <label><tml:label key="content-box.settings.background-image"/>:</label>
