--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/accordion/settings.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/accordion/settings.tml
@@ -1,6 +1,6 @@
 <label><tml:label key="accordion.settings.effect-speed"/>:</label>
 <div style="margin:10px">
-	<tml:input name="{scoped:effect_speed}" type="select" options="{label('accordion.settings.effect-speed-options')}" default="fast" mode="{option('mode')}"/>
+	<tml:input name="{scoped:effect_speed}" type="select" cssclass="form-control" options="{label('accordion.settings.effect-speed-options')}" default="fast" mode="{option('mode')}"/>
 </div>	
 
 <div style="margin:10px">
