#00005513: added cssclass="form-control"

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/columns/settings.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/columns/settings.tml
@@ -25,7 +25,7 @@
 
 <label><tml:label key="columns.settings.layout"/>:</label>
 <div style="margin:10px">
-	<tml:input name="{scoped:layout}" type="select" options="{label('columns.settings.layout.options')}" default="standard" mode="{option('mode')}"/>
+	<tml:input name="{scoped:layout}" type="select" cssclass="form-control" options="{label('columns.settings.layout.options')}" default="standard" mode="{option('mode')}"/>
 </div>
 
 <tml:script>
@@ -35,6 +35,6 @@
 <tml:case condition="_responsive">
 	<label><tml:label key="columns.settings.responsive"/>:</label>
 	<div style="margin:10px">
-		<tml:input name="{scoped:responsive}" type="select" options="{label('columns.settings.responsive.options')}" default="clear" mode="{option('mode')}"/>
+		<tml:input name="{scoped:responsive}" type="select" cssclass="form-control" options="{label('columns.settings.responsive.options')}" default="clear" mode="{option('mode')}"/>
 	</div>
 </tml:case>
