--- a/OpenWGA/plugins/admin/design/tml/html/webprojects/project/menu-contentstore-configuration.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/webprojects/project/menu-contentstore-configuration.tml
@@ -145,12 +145,15 @@
 				});
 			</tml:case>
 			
-			menu.on("show", function(){
-				Ext.get("<tml:option name="group-id"/>").addClass("menu-selected");
-			})
-			menu.on("hide", function(){
-				Ext.get("<tml:option name="group-id"/>").removeClass("menu-selected");
-			})
+			<tml:case hasoptions="group-id">
+				menu.on("show", function(){
+					Ext.get("<tml:option name="group-id"/>").addClass("menu-selected");
+				})
+				menu.on("hide", function(){
+					Ext.get("<tml:option name="group-id"/>").removeClass("menu-selected");
+				})
+			</tml:case>
+			
 			var button = new Ext.Button({
 				cls:'x-btn-text-icon',						
 				icon: '<tml:url type="file" db="@afw" doc="icons" file="{_dbPatcheable ? 'database_go.png' : 'database.png'}"/>',		                
