--- a/OpenWGA/plugins/cm-neo/design/tml/html/mod-contentstore.tml
+++ b/OpenWGA/plugins/cm-neo/design/tml/html/mod-contentstore.tml
@@ -4,6 +4,7 @@
 	request.getSession().removeAttribute(WGAcore.ATTRIB_VIRTUAL_CONTENT_URL);
 	request.getSession().removeAttribute(WGAcore.ATTRIB_NO_CONTENT_NOTIFCATION_URL);
 	request.getSession().removeAttribute("CM.appid");
+	request.getSession().removeAttribute(Packages.de.innovationgate.cm_neo.filter.ResourceAccessFilter.SESSION_ATTRIB_EDITABLE_DATABASES);	
 	
 	WGA.app(portlet.dbkey).domain().auth().logout()
 	
@@ -24,6 +25,15 @@
 	
 		var url = WGA.urlBuilder(WGA.design().resolve("no-content").layoutURL()).build();
 		request.getSession().setAttribute(wgacore.ATTRIB_NO_CONTENT_NOTIFCATION_URL, url + "?dbkey=#DBKEY#&contentkey=#KEY#");
+
+		var dbkeys = request.getSession().getAttribute(Packages.de.innovationgate.cm_neo.filter.ResourceAccessFilter.SESSION_ATTRIB_EDITABLE_DATABASES);
+		if(!dbkeys)
+			dbkeys=WGA.createList()
+		if(!dbkeys.contains(portlet.dbkey))
+			dbkeys.add(portlet.dbkey)
+		request.getSession().setAttribute(Packages.de.innovationgate.cm_neo.filter.ResourceAccessFilter.SESSION_ATTRIB_EDITABLE_DATABASES, dbkeys);	
+
+		console.log(Packages.de.innovationgate.cm_neo.filter.ResourceAccessFilter.SESSION_ATTRIB_EDITABLE_DATABASES, dbkeys);
 
 		var app = WGA.app(portlet.dbkey);
 		var auth = app.domain().auth()
