--- a/OpenWGA/plugins/admin/design/tml/html/wga/filters/portlet.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/wga/filters/portlet.tml
@@ -61,6 +61,11 @@
 	DBM.wgaconfig.save(config);
 </tml:action>
 
+<tml:action id="reload-servlet-filter">
+	WGA.Core.getFilter().initFilterChain()
+	_server_message =  "Filter chain reinitialized";
+</tml:action>
+
 <tml:include designdb="@ui" ref="tabview_dynamic">
 
 	<tml:option name="title">All Filter</tml:option>	
@@ -79,6 +84,15 @@
 								WGA.ajax.callAction("<tml:action ref="newFilter"/>","<tml:script expression="portlet.portletkey"/>");
 							}
 						}
+						,"->"
+						,{
+							cls:'x-btn-text-icon',						
+							icon: '<tml:url type="file" db="@afw" doc="icons" file="arrow_switch.png"/>',		                
+							text: "Re-Init Servlet Filter Chain",
+							handler: function(){
+								WGA.ajax.callAction("<tml:action ref="reload-servlet-filter"/>","<tml:script expression="portlet.portletkey"/>");
+							}
+						}
 					]
 				</tml:option>
 			
@@ -87,6 +101,12 @@
 				</tml:option>
 				
 				<tml:option name="body">
+
+					<tml:case isdefined="_server_message">
+						<tml:include designdb="@ui" ref="message">
+							<tml:option name="title"><tml:item name="_server_message"/></tml:option>
+						</tml:include>			
+					</tml:case>
 
 					<tml:script>
 						_filters = DBM.wgaconfig.get().filterMappings
